# jdiff

./: Cargo.toml  LICENSE
src/: event.rs  main.rs  model.rs  update.rs
src/database/: data_access_models.rs  db_manager.rs  migrations.rs  mod.rs  schema.rs
src/models/: app_model.rs  app_state.rs  base_model.rs  command_bar.rs  counter.rs  editor_model.rs  mod.rs  model_manager.rs  router.rs
src/models/editor/: editor_container_models.rs  editor_model.rs  editor_traits.rs  history_model.rs  mod.rs  types.rs
src/store/: dispatcher.rs
src/ui/: manager.rs  mod.rs  router.rs
src/ui/command_bar/: view.rs
src/ui/views/: counter_view.rs  editor_view.rs  mod.rs  view.rs  welcome_view.rs
