[package]
name = "jdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = { version = "0.27.0", features = ["serde", "all-widgets"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[profile.release]
debug = true
